internal/xds/translator/testdata/out/xds-ir/merge-backends-duplicate-backend-weighted.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/http
  virtualHosts:
  - domains:
    - '*'
    metadata:
      filterMetadata:
        envoy-gateway:
          resources:
          - kind: Gateway
            name: gateway-1
            namespace: envoy-gateway
            sectionName: http
    name: envoy-gateway/gateway-1/http/*
    routes:
    - match:
        pathSeparatedPrefix: /split
      metadata:
        filterMetadata:
          envoy-gateway:
            resources:
            - kind: HTTPRoute
              name: http-route-1
              namespace: default
      name: httproute/default/http-route-1/rule/0/match/0/*
      route:
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
        upgradeConfigs:
        - upgradeType: websocket
        weightedClusters:
          clusters:
          - name: service/default/service-1/8080/http
            weight: 1
          - name: service/default/service-1/8080/http
            weight: 9
          - name: service/default/service-2/8080/http
            weight: 10
